добавлен блок с проектами

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <header>
       <nav>
         <ul>
+          <li><a href="#projects">Проекты</a></li>
+          <li class="separator"></li>
           <li><a href="#exp">Опыт</a></li>
           <li class="separator"></li>
           <li><a href="#skills">Навыки</a></li>
@@ -37,7 +39,7 @@
             <p class="list">Специализируюсь на мобильной и веб разработке</p>
             <p class="list">Основал и руковожу командой разработки GasuDev</p>
             <p class="list">Поддерживаю проекты в сфере образования и стартап Инношкола</p>
-            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('/files/img/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('/files/img/gasudev.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('/files/img/telegram.svg');"></a></div>
+            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('/files/img/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('/files/img/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('/files/img/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('/files/img/telegram.svg');"></a></div>
           </div>
           <div class="content__part">
             <div class="image" style="--url: url('/files/img/about.webp');"></div>
@@ -107,6 +109,37 @@
             <p class="list">Поддержка приложений на проме</p>
             <p class="list">Разработка сервисов для работы с ЦЭП</p>
             <p class="list">Администрирование и развертывание приложений</p>
+          </div>
+        </div>
+      </section>
+      <section id="projects">
+        <h2>ПРОЕКТЫ</h2>
+        <div class="content"> 
+          <div class="content__part project">
+            <h3> 
+              <div class="logo" style="--url: url('/files/img/doc-service.svg');"></div>SmallBuild<a class="link" target="_blank" aria-label="SmallBuild" href="https://gasu.neocities.org"></a>
+            </h3>
+            <p class="role">Руководитель проекта. Старший разработчик</p>
+            <p class="status">Релиз</p>
+            <p class="description">Симулятор жизненного цикла строительной фирмы. Выполнено по заказу ФЭУ СПБГАСУ.</p>
+          </div>
+          <div class="content__part project">
+            <h3>Док Сервис</h3>
+            <p class="role">Собственная разработка</p>
+            <p class="status">Релиз</p>
+            <p class="description"> Приложение для выдачи сертификатов об обучении подписанных ЭЦП. Выполнено для использования IT школой CodeSpace.</p>
+          </div>
+          <div class="content__part project">
+            <h3>KidHub</h3>
+            <p class="role">Собственная разработка</p>
+            <p class="status">Демо тестирование</p>
+            <p class="description">LMS система с интерактивными модулями и корпоративная платформа. Разрабатывается по заказу ООО Инношкола.</p>
+          </div>
+          <div class="content__part project">
+            <h3>СПБГАСУ мобайл</h3>
+            <p class="role">Руководитель проекта. Архитектор</p>
+            <p class="status">Активная разработка</p>
+            <p class="description">Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.</p>
           </div>
         </div>
       </section>
