--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     </header>
     <main>
       <section class="active" id="about">
-        <h2>DESIGN x WEB x ANDROID</h2>
+        <div class="back"></div>
         <div class="content">
           <div class="content__part">
             <h3>Федоричев Лев</h3>
             <p class="list">Специализируюсь на мобильной и веб разработке</p>
             <p class="list">Основал и руковожу командой разработки GasuDev</p>
             <p class="list">Поддерживаю проекты в сфере образования и стартап Инношкола</p>
-            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('/files/img/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('/files/img/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('/files/img/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('/files/img/telegram.svg');"></a></div>
+            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('/files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('/files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('/files/img/links/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('/files/img/links/telegram.svg');"></a></div>
           </div>
           <div class="content__part">
             <div class="image" style="--url: url('/files/img/about.webp');"></div>
@@ -47,7 +47,7 @@
         </div>
       </section>
       <section id="skills">
-        <h2>НАВЫКИ х ТЕХНОЛОГИИ</h2>
+        <div class="back"></div>
         <div class="content">
           <div class="content__part">
             <h3>
@@ -85,7 +85,7 @@
         </div>
       </section>
       <section id="exp">
-        <h2>ОПЫТ РАБОТЫ</h2>
+        <div class="back"></div>
         <div class="content"> 
           <div class="content__part">
             <ul class="work-grid">
@@ -113,33 +113,90 @@
         </div>
       </section>
       <section id="projects">
-        <h2>ПРОЕКТЫ</h2>
+        <div class="back"></div>
         <div class="content"> 
-          <div class="content__part project">
-            <h3> 
-              <div class="logo" style="--url: url('/files/img/doc-service.svg');"></div>SmallBuild<a class="link" target="_blank" aria-label="SmallBuild" href="https://gasu.neocities.org"></a>
-            </h3>
-            <p class="role">Руководитель проекта. Старший разработчик</p>
-            <p class="status">Релиз</p>
-            <p class="description">Симулятор жизненного цикла строительной фирмы. Выполнено по заказу ФЭУ СПБГАСУ.</p>
-          </div>
-          <div class="content__part project">
-            <h3>Док Сервис</h3>
-            <p class="role">Собственная разработка</p>
-            <p class="status">Релиз</p>
-            <p class="description"> Приложение для выдачи сертификатов об обучении подписанных ЭЦП. Выполнено для использования IT школой CodeSpace.</p>
-          </div>
-          <div class="content__part project">
-            <h3>KidHub</h3>
-            <p class="role">Собственная разработка</p>
-            <p class="status">Демо тестирование</p>
-            <p class="description">LMS система с интерактивными модулями и корпоративная платформа. Разрабатывается по заказу ООО Инношкола.</p>
-          </div>
-          <div class="content__part project">
-            <h3>СПБГАСУ мобайл</h3>
-            <p class="role">Руководитель проекта. Архитектор</p>
-            <p class="status">Активная разработка</p>
-            <p class="description">Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.</p>
+          <div class="projects"> 
+            <div class="projects__icons-list">
+              <div class="logo active" style="--url: url('/files/img/logos/gasubuild.png');" data-active="gasubuild"> </div>
+              <div class="logo" style="--url: url('/files/img/logos/aisbpek.svg');" data-active="aisbpek"> </div>
+              <div class="logo" style="--url: url('/files/img/logos/gasu-app.png');" data-active="gasu-app"></div>
+              <div class="logo" style="--url: url('/files/img/logos/doc-service.svg');" data-active="doc-service"> </div>
+              <div class="logo" style="--url: url('/files/img/logos/kidhub.svg');" data-active="kidhub"> </div>
+              <div class="logo" style="--url: url('/files/img/logos/codespace.svg');" data-active="codespace"> </div>
+              <div class="logo" style="--url: url('/files/img/logos/gasudev.svg');" data-active="gasudev"> </div>
+            </div>
+            <div class="projects__blocks-list"> 
+              <div class="projects__block gasubuild active">
+                <div class="header"> 
+                  <h3>GasuBuild</h3><a class="link" target="_blank" aria-label="SmallBuild" href="https://gasu.neocities.org"></a>
+                </div>
+                <p class="role">Руководитель проекта. Старший разработчик</p>
+                <div class="description"> 
+                  <p class="status">Релиз</p>
+                  <p>Симулятор жизненного цикла строительной фирмы. Выполнено по заказу ФЭУ СПБГАСУ.</p>
+                </div>
+              </div>
+              <div class="projects__block doc-service">
+                <div class="header">
+                  <h3>Док Сервис</h3>
+                </div>
+                <p class="role">Собственная разработка</p>
+                <div class="description"> 
+                  <p class="status">Релиз</p>
+                  <p>Приложение для выдачи сертификатов об обучении подписанных ЭЦП. Выполнено для использования IT школой CodeSpace.</p>
+                </div>
+              </div>
+              <div class="projects__block kidhub">
+                <div class="header">
+                  <h3>KidHub</h3>
+                </div>
+                <p class="role">Собственная разработка</p>
+                <div class="description"> 
+                  <p class="status">Демо тестирование</p>
+                  <p>LMS система с интерактивными модулями и корпоративная платформа. Разрабатывается по заказу ООО Инношкола.</p>
+                </div>
+              </div>
+              <div class="projects__block aisbpek">
+                <div class="header">
+                  <h3>АИСПБ-ЭК</h3>
+                </div>
+                <p class="role">Веб разработчик</p>
+                <div class="description"> 
+                  <p class="status">Активная разработка</p>
+                  <p>Программное обеспечение для обслуживания документооборота Комитета финансов Санкт-Петербурга.</p>
+                </div>
+              </div>
+              <div class="projects__block gasu-app">
+                <div class="header"> 
+                  <h3>GASU app</h3>
+                </div>
+                <p class="role">Руководитель проекта. Архитектор</p>
+                <div class="description"> 
+                  <p class="status">Старт разработки</p>
+                  <p>Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.</p>
+                </div>
+              </div>
+              <div class="projects__block codespace">
+                <div class="header"> 
+                  <h3>Сайт CodeSpace</h3><a class="link" target="_blank" aria-label="codespace_link" href="https://ит.инношкола.рф"></a>
+                </div>
+                <p class="role">Собственная разработка</p>
+                <div class="description"> 
+                  <p class="status">Релиз</p>
+                  <p>Сайт IT школы CodeSpace. Содержит панель администратора для обработки заявок с telegram бота и самого сайта.</p>
+                </div>
+              </div>
+              <div class="projects__block gasudev">
+                <div class="header"> 
+                  <h3>Сайт GasuDev</h3><a class="link" target="_blank" aria-label="gasudev_link" href="https://dev.spbgasu.ru"></a>
+                </div>
+                <p class="role">Собственная разработка</p>
+                <div class="description"> 
+                  <p class="status">Релиз</p>
+                  <p>Сайт команды разработки GasuDev.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
