--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <p class="list">Специализируюсь на мобильной и веб разработке</p>
             <p class="list">Основал и руковожу командой разработки GasuDev</p>
             <p class="list">Поддерживаю проекты в сфере образования и стартап Инношкола</p>
-            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('files/img/links/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('files/img/links/telegram.svg');"></a></div>
+            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('./files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('./files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('./files/img/links/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('./files/img/links/telegram.svg');"></a></div>
           </div>
           <div class="content__part">
-            <div class="image" style="--url: url('files/img/about.webp');"></div>
+            <div class="image" style="--url: url('./files/img/about.webp');"></div>
           </div>
         </div>
       </section>
@@ -117,13 +117,13 @@
         <div class="content"> 
           <div class="projects"> 
             <div class="projects__icons-list">
-              <div class="logo active" style="--url: url('files/img/logos/gasubuild.png');" data-active="gasubuild"> </div>
-              <div class="logo" style="--url: url('files/img/logos/aisbpek.svg');" data-active="aisbpek"> </div>
-              <div class="logo" style="--url: url('files/img/logos/gasu-app.png');" data-active="gasu-app"></div>
-              <div class="logo" style="--url: url('files/img/logos/doc-service.svg');" data-active="doc-service"> </div>
-              <div class="logo" style="--url: url('files/img/logos/kidhub.svg');" data-active="kidhub"> </div>
-              <div class="logo" style="--url: url('files/img/logos/codespace.svg');" data-active="codespace"> </div>
-              <div class="logo" style="--url: url('files/img/logos/gasudev.svg');" data-active="gasudev"> </div>
+              <div class="logo active" style="--url: url('./files/img/logos/gasubuild.png');" data-active="gasubuild"> </div>
+              <div class="logo" style="--url: url('./files/img/logos/aisbpek.svg');" data-active="aisbpek"> </div>
+              <div class="logo" style="--url: url('./files/img/logos/gasu-app.png');" data-active="gasu-app"></div>
+              <div class="logo" style="--url: url('./files/img/logos/doc-service.svg');" data-active="doc-service"> </div>
+              <div class="logo" style="--url: url('./files/img/logos/kidhub.svg');" data-active="kidhub"> </div>
+              <div class="logo" style="--url: url('./files/img/logos/codespace.svg');" data-active="codespace"> </div>
+              <div class="logo" style="--url: url('./files/img/logos/gasudev.svg');" data-active="gasudev"> </div>
             </div>
             <div class="projects__blocks-list"> 
               <div class="projects__block gasubuild active">
