--- a/index.html
+++ b/index.html
@@ -204,6 +204,6 @@
     <footer>
       <p>© 2024 FollowTheOwlets</p>
     </footer>
-    <script async src="./out/index.js"> </script>
+    <script src="./out/index.js"> </script>
   </body>
 </html>
