--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <div class="content">
           <div class="content__part">
             <h3>Федоричев Лев</h3>
-            <p class="list">Специализируюсь на мобильной и веб разработке</p>
+            <p class="list">BackLead и TechLead кроссплатформенных команд</p>
             <p class="list">Основал и руковожу командой разработки GasuDev</p>
-            <p class="list">Поддерживаю проекты в сфере образования и стартап Инношкола</p>
+            <p class="list">Занимал роли ведущего разработчика в командах Сбербанка, Рольфа и Ситилаба</p>
+            <p class="list">Поддерживаю проекты в сфере EduTech</p>
             <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('../files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('../files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('../files/img/links/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('../files/img/links/telegram.svg');"></a></div>
           </div>
           <div class="content__part">
@@ -56,30 +57,31 @@
             <p class="list" style="text-transform:uppercase;">Code Review</p>
             <p class="list" style="text-transform:uppercase;">Software architecture</p>
             <p class="list" style="text-transform:uppercase;">Mentoring</p>
+            <p class="list" style="text-transform:uppercase;">Extremal MVP</p>
           </div>
           <div class="content__part">
             <ul class="skills-list">
-              <li class="black xxl">TypeScript</li>
-              <li class="black">Java</li>
-              <li class="black s">C++</li>
+              <li class="black xl">TypeScript</li>
+              <li class="black m">Java</li>
+              <li class="black">Kotlin</li>
               <li class="white">NestJS</li>
               <li class="white">Spring</li>
               <li class="white">Express</li>
               <li class="black xl">PostgreSQL</li>
-              <li class="black">SQLite</li>
+              <li class="black">Kafka</li>
               <li class="black m">Redis</li>
-              <li>React</li>
-              <li class="m">Pug</li>
-              <li class="xl">Vaadin</li>
-              <li class="black s">Qt</li>
-              <li class="black xl">JavaFx</li>
-              <li class="black xl">Android</li>
-              <li class="white">Gulp</li>
-              <li class="white">Maven</li>
-              <li class="white">Webpack</li>
-              <li class="xxl">Docker</li>
-              <li class="m">Git</li>
-              <li class="m">Jira</li>
+              <li class="m">MongoDB</li>
+              <li>Type ORM</li>
+              <li class="xl">Jest</li>
+              <li class="black s">Swagger</li>
+              <li class="black xl">gRPC</li>
+              <li class="black xl">GraphQL</li>
+              <li class="white m">ELK</li>
+              <li class="white">Saga</li>
+              <li class="white xl">Inbox Outbox</li>
+              <li class="xl">OpenShift</li>
+              <li class="m">K8s</li>
+              <li>Gitlab CI</li>
             </ul>
           </div>
         </div>
@@ -90,25 +92,26 @@
           <div class="content__part">
             <ul class="work-grid">
               <li class="comp">СПБГАСУ УИТ</li>
-              <li class="year">2021 - 2023</li>
+              <li class="year">1 года</li>
               <li class="description">Веб разработчик</li>
-              <li class="comp">IT School CodeSpace</li>
-              <li class="year">2022 - 2024</li>
-              <li class="description">Технический директор</li>
               <li class="comp">GasuDev</li>
-              <li class="year">2023 - ...</li>
-              <li class="description">Руководитель команды - TeamLead</li>
-              <li class="comp">АИСА</li>
-              <li class="year">2023 - ...</li>
-              <li class="description">Веб-разработчик</li>
+              <li class="year">3 года</li>
+              <li class="description">Middle JS Developer<i class="part" style="padding: 0.2pm;font-">2/3</i></li>
+              <li class="description">Senior JS Developer (Lead)<i class="part" style="padding: 0.2pm;font-">1/3</i></li>
+              <li class="comp">IT School CodeSpace</li>
+              <li class="year">2 года</li>
+              <li class="description">TechLead</li>
+              <li class="comp">СберБанк</li>
+              <li class="year">1 год</li>
+              <li class="description">Senior Java Developer</li>
             </ul>
           </div>
           <div class="content__part">
-            <h3>Решаемые задачи</h3>
-            <p class="list">Разработка LMS платформ с нуля</p>
-            <p class="list">Поддержка приложений на проме</p>
-            <p class="list">Разработка сервисов для работы с ЦЭП</p>
-            <p class="list">Администрирование и развертывание приложений</p>
+            <h3>Решенные задачи</h3>
+            <p class="list">Со своей командой разработал LMS<br>и сервис видеоконференций KidsChat</p>
+            <p class="list">Внедрил Detect во все сервисы команды</p>
+            <p class="list">Создал IT отдел студенческой активной разработки в СПБГАСУ</p>
+            <p class="list">Совместно с разработкой сервиса выпуска сертификатов<br>реализовал библиотеку для построения таких сервисов<br>и инициировал продажу нескольких MVP</p>
           </div>
         </div>
       </section>
@@ -117,20 +120,18 @@
         <div class="content"> 
           <div class="projects"> 
             <div class="projects__icons-list">
-              <div class="logo active" style="--url: url('../files/img/logos/gasubuild.png');" data-active="gasubuild"> </div>
-              <div class="logo" style="--url: url('../files/img/logos/aisbpek.svg');" data-active="aisbpek"> </div>
+              <div class="logo" style="background-color:white;--url: url('../files/img/logos/vector.png');" data-active="vector"></div>
+              <div class="logo active" style="--url: url('../files/img/logos/gasubuild.png');" data-active="gasubuild"></div>
               <div class="logo" style="--url: url('../files/img/logos/gasu-app.png');" data-active="gasu-app"></div>
-              <div class="logo" style="--url: url('../files/img/logos/doc-service.svg');" data-active="doc-service"> </div>
-              <div class="logo" style="--url: url('../files/img/logos/kidhub.svg');" data-active="kidhub"> </div>
-              <div class="logo" style="--url: url('../files/img/logos/codespace.svg');" data-active="codespace"> </div>
-              <div class="logo" style="--url: url('../files/img/logos/gasudev.svg');" data-active="gasudev"> </div>
+              <div class="logo" style="--url: url('../files/img/logos/doc-service.svg');" data-active="doc-service"></div>
+              <div class="logo" style="--url: url('../files/img/logos/kidhub.svg');" data-active="kidhub"></div>
             </div>
-            <div class="projects__blocks-list"> 
+            <div class="projects__blocks-list">
               <div class="projects__block gasubuild active">
                 <div class="header"> 
                   <h3>GasuBuild</h3><a class="link" target="_blank" aria-label="SmallBuild" href="https://gasu.neocities.org"></a>
                 </div>
-                <p class="role">Руководитель проекта. Старший разработчик</p>
+                <p class="role">Инди разработка</p>
                 <div class="description"> 
                   <p class="status">Релиз</p>
                   <p>Симулятор жизненного цикла строительной фирмы. Выполнено по заказу ФЭУ СПБГАСУ.</p>
@@ -140,7 +141,7 @@
                 <div class="header">
                   <h3>Док Сервис</h3>
                 </div>
-                <p class="role">Собственная разработка</p>
+                <p class="role">BackLead</p>
                 <div class="description"> 
                   <p class="status">Релиз</p>
                   <p>Приложение для выдачи сертификатов об обучении подписанных ЭЦП. Выполнено для использования IT школой CodeSpace.</p>
@@ -150,50 +151,30 @@
                 <div class="header">
                   <h3>KidHub</h3>
                 </div>
-                <p class="role">Собственная разработка</p>
+                <p class="role">BackLead</p>
                 <div class="description"> 
-                  <p class="status">Демо тестирование</p>
+                  <p class="status">Релиз</p>
                   <p>LMS система с интерактивными модулями и корпоративная платформа. Разрабатывается по заказу ООО Инношкола.</p>
-                </div>
-              </div>
-              <div class="projects__block aisbpek">
-                <div class="header">
-                  <h3>АИСПБ-ЭК</h3>
-                </div>
-                <p class="role">Веб разработчик</p>
-                <div class="description"> 
-                  <p class="status">Активная разработка</p>
-                  <p>Программное обеспечение для обслуживания документооборота Комитета финансов Санкт-Петербурга.</p>
                 </div>
               </div>
               <div class="projects__block gasu-app">
                 <div class="header"> 
                   <h3>GASU app</h3>
                 </div>
-                <p class="role">Руководитель проекта. Архитектор</p>
+                <p class="role">Руководитель проекта. Senior Fullstack Developer</p>
                 <div class="description"> 
-                  <p class="status">Старт разработки</p>
+                  <p class="status">Релиз</p>
                   <p>Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.</p>
                 </div>
               </div>
-              <div class="projects__block codespace">
-                <div class="header"> 
-                  <h3>Сайт CodeSpace</h3><a class="link" target="_blank" aria-label="codespace_link" href="https://ит.инношкола.рф"></a>
+              <div class="projects__block vector">
+                <div class="header">
+                  <h3>Sber</h3>
                 </div>
-                <p class="role">Собственная разработка</p>
-                <div class="description"> 
-                  <p class="status">Релиз</p>
-                  <p>Сайт IT школы CodeSpace. Содержит панель администратора для обработки заявок с telegram бота и самого сайта.</p>
-                </div>
-              </div>
-              <div class="projects__block gasudev">
-                <div class="header"> 
-                  <h3>Сайт GasuDev</h3><a class="link" target="_blank" aria-label="gasudev_link" href="https://dev.spbgasu.ru"></a>
-                </div>
-                <p class="role">Собственная разработка</p>
-                <div class="description"> 
-                  <p class="status">Релиз</p>
-                  <p>Сайт команды разработки GasuDev.</p>
+                <p class="role">Senior Developer</p>
+                <div class="description">
+                  <p class="status">Развитие существующего проекта</p>
+                  <p>Продукт оценивающий деловую репутацию физических и юридических лиц.</p>
                 </div>
               </div>
             </div>
