--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="content__part">
             <ul class="work-grid">
               <li class="comp">СПБГАСУ УИТ</li>
-              <li class="year">1 года</li>
+              <li class="year">1 год</li>
               <li class="description">Веб разработчик</li>
               <li class="comp">GasuDev</li>
               <li class="year">3 года</li>
