--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="list">Основал и руковожу командой разработки GasuDev</p>
             <p class="list">Занимал роли ведущего разработчика в командах Сбербанка, Рольфа и Ситилаба</p>
             <p class="list">Поддерживаю проекты в сфере EduTech</p>
-            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('../files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('../files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Инношкола" href="https://ит.инношкола.рф" style="--url: url('../files/img/links/innoshkola.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/teamlead_gasu" style="--url: url('../files/img/links/telegram.svg');"></a></div>
+            <div class="links"><a class="link-circle" aria-label="Github" href="https://github.com/FollowTheOwlets" style="--url: url('../files/img/links/github.svg');"></a><a class="link-circle" aria-label="GasuDev" href="https://dev.spbgasu.ru" style="--url: url('../files/img/links/gasudev.svg');"></a><a class="link-circle" aria-label="Telegram" href="https://t.me/fedorichev_o" style="--url: url('../files/img/links/telegram.svg');"></a></div>
           </div>
           <div class="content__part">
             <div class="image" style="--url: url('../files/img/about.webp');"></div>
@@ -101,15 +101,15 @@
               <li class="comp">IT School CodeSpace</li>
               <li class="year">2 года</li>
               <li class="description">TechLead</li>
-              <li class="comp">СберБанк</li>
-              <li class="year">1 год</li>
-              <li class="description">Senior Java Developer</li>
+              <li class="comp">RolfTech</li>
+              <li class="year">По н.в.</li>
+              <li class="description">BackLead Developer</li>
             </ul>
           </div>
           <div class="content__part">
             <h3>Решенные задачи</h3>
             <p class="list">Со своей командой разработал LMS<br>и сервис видеоконференций KidsChat</p>
-            <p class="list">Внедрил Detect во все сервисы команды</p>
+            <p class="list">Разработал и защитил проект инфраструктуры оркестрации SaaS Flora в RolfTech</p>
             <p class="list">Создал IT отдел студенческой активной разработки в СПБГАСУ</p>
             <p class="list">Совместно с разработкой сервиса выпуска сертификатов<br>реализовал библиотеку для построения таких сервисов<br>и инициировал продажу нескольких MVP</p>
           </div>
@@ -120,14 +120,14 @@
         <div class="content"> 
           <div class="projects"> 
             <div class="projects__icons-list">
-              <div class="logo" style="background-color:white;--url: url('../files/img/logos/vector.png');" data-active="vector"></div>
-              <div class="logo active" style="--url: url('../files/img/logos/gasubuild.png');" data-active="gasubuild"></div>
+              <div class="logo active" style="background-color:white;--url: url('../files/img/logos/rolf.png');" data-active="rolf"></div>
+              <div class="logo" style="--url: url('../files/img/logos/gasubuild.png');" data-active="gasubuild"></div>
               <div class="logo" style="--url: url('../files/img/logos/gasu-app.png');" data-active="gasu-app"></div>
               <div class="logo" style="--url: url('../files/img/logos/doc-service.svg');" data-active="doc-service"></div>
               <div class="logo" style="--url: url('../files/img/logos/kidhub.svg');" data-active="kidhub"></div>
             </div>
             <div class="projects__blocks-list">
-              <div class="projects__block gasubuild active">
+              <div class="projects__block gasubuild">
                 <div class="header"> 
                   <h3>GasuBuild</h3><a class="link" target="_blank" aria-label="SmallBuild" href="https://gasu.neocities.org"></a>
                 </div>
@@ -167,14 +167,14 @@
                   <p>Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.</p>
                 </div>
               </div>
-              <div class="projects__block vector">
+              <div class="projects__block rolf active">
                 <div class="header">
-                  <h3>Sber</h3>
+                  <h3>RolfTech</h3>
                 </div>
-                <p class="role">Senior Developer</p>
+                <p class="role">BackLead Developer</p>
                 <div class="description">
-                  <p class="status">Развитие существующего проекта</p>
-                  <p>Продукт оценивающий деловую репутацию физических и юридических лиц.</p>
+                  <p class="status">Разработка оркестратора и лидерство над другими разработчиками</p>
+                  <p>SaaS платформа для продажи автомобилей</p>
                 </div>
               </div>
             </div>
